# predictive-maintenance-triage

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: eval_config.yaml
data/: agent_audit_log.jsonl  anomaly_labels.csv.dvc  sensor_data.csv.dvc
docs/: model_card.md  monitoring.md  phase3_model_findings.md  runbook.md
scripts/: diagnose_bearing4.py  diagnose_model.py  diagnose_split.py  export_audit_for_bi.py  generate_agent_history.py  generate_real_labels.py  generate_sensor_data.py  load_nasa_bearing.py  plot_bearings.py  rul_labels_compare.py  run_agent_demo.py  run_graph_demo.py  smooth_bearing4.py  train_and_save_model.py  train_anomaly_model.py  train_lightgbm_model.py  train_real_anomaly.py  zscore_bearing4.py
src/agents/: graph_agent.py  graph_nodes.py  graph_state.py  maintenance_agent.py
src/evaluation/: metrics.py
src/features/: engineering.py
src/genai/: prompts.py  report.py
src/ingestion/: batch.py  contracts.py
src/models/: anomaly.py  supervised.py
src/monitoring/: drift.py
src/serving/: app.py
tests/: test_agent.py  test_anomaly.py  test_batch.py  test_contracts.py  test_drift.py  test_eval_gate.py  test_features.py  test_graph_agent.py  test_metrics.py  test_prompts.py  test_report.py  test_serving.py  test_smoke.py  test_supervised.py
